Revert "Use schema-info"